@@ -520,8 +520,16 @@ class MS_Model_Member extends MS_Model {
 			)
 		);
 
+		if ( ! is_array( $args ) ) {
+			$args = array();
+		}
+
 		switch ( $search_option ) {
 			case self::SEARCH_ONLY_MEMBERS:
+				if ( ! is_array( $args['meta_query'] ) ) {
+					$args['meta_query'] = array();
+				}
+
 				$args['meta_query']['is_member'] = array(
 					'key'   => 'ms_is_member',
 					'value' => true,
@@ -529,6 +537,10 @@ class MS_Model_Member extends MS_Model {
 				break;
 
 			case self::SEARCH_NOT_MEMBERS:
+				if ( ! is_array( $args['meta_query'] ) ) {
+					$args['meta_query'] = array();
+				}
+
 				$args['meta_query']['relation'] = 'OR';
 				$args['meta_query']['is_member'] = array(
 					'key'     => 'ms_is_member',
